# UCD_WaterWatch

./: .gitignore  EDMS.sln  Excel Installation Background.txt  README.md  azure-pipelines.yml
AlgLib/: AlgLib.vcxproj  AlgLib.vcxproj.filters  fastexp.cpp  fastexp.h  ieee.h  product.h
CURL_STATIC_LIB/: CURL_STATIC_LIB.cpp  CURL_STATIC_LIB.h  CURL_STATIC_LIB.vcxproj  CURL_STATIC_LIB.vcxproj.filters
CsConsoleApp/: CsConsoleApp - Backup.csproj  CsConsoleApp.csproj  Program.cs
CsFoundation/: CsFoundation.cs  CsFoundation.projitems  CsFoundation.shproj
DlibStaticLibrary/: DlibStaticLibrary.vcxproj  DlibStaticLibrary.vcxproj.filters  framework.h
EPAnetLib/: EPAnetLib.vcxproj  EPAnetLib.vcxproj.filters
ExcelExtensions/: Class1.cs  ExcelExtensions-AddIn.dna  ExcelExtensions.csproj  packages.config
ExcelInterop/: ExcelInterop.vcxproj  ExcelInterop.vcxproj.filters  Wrapper.cpp  Wrapper.h
Excel_WaterWatchLibrary/: Excel_WaterWatchLibrary.Designer.cs  Excel_WaterWatchLibrary.Designer.xml  Excel_WaterWatchLibrary.cs  Excel_WaterWatchLibrary.csproj  WaterWatchExcelMethods.cs  libcurl_a.lib  nanodbc.lib
FiberTasks/: Actions.h  Alloc.cpp  Alloc.h  Alloc_H.cpp  Callbacks.h  Concurrent_Queue.h  Config.h  Fiber.cpp  Fiber.h  FiberContainers.h  FiberTasks.cpp  FiberTasks.h  FiberTasks.vcxproj  FiberTasks.vcxproj.filters  Fiber_H.cpp  Fibers.cpp  Fibers.h  Fibtex.cpp  Fibtex.h  Fibtex_H.cpp  (+14 more)
WaterWatch_Python_SWIG/cwee/: pyproject.toml
WaterWatch_Python_SWIG/cwee/src/: cwee.py  setup.py
WaterWatch_Python_SWIG/cwee/src/cwee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1146 files in other folders)
